ResumeWebsite/src/assets/css/projects.css
.projects-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
    gap: 1.5rem;
    padding: 10px var(--dynamic-padding); /* Match title and about card padding */
    margin: 0 0 50px 0; /* Add bottom margin to match spacing between sections */
    width: 100%; /* Fill full width */
    box-sizing: border-box; /* Include padding in width calculation */
    grid-auto-flow: dense;
}

.project-card {
    background: var(--color-base);
    border-radius: 8px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    overflow: hidden;
    text-decoration: none;
    color: var(--color-text-light);
    transition: transform 0.2s ease, box-shadow 0.2s ease;
    display: flex;
    flex-direction: column;
    font-size: 12pt;
}

.project-card:hover {
    transform: translateY(-5px);
    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.2);
}

.project-image img {
    width: 100%;
    height: 230px;
    object-fit: cover;
}

.project-content {
    padding: 1rem;
}

.project-content h3 {
    color: var(--color-accent);
}

.project-card--priority {
    grid-column: span 2;
    grid-row: span 2;
}

.project-card--priority .project-image img {
    height: 485px;
}

@media (min-width: 1400px) {
    .projects-grid {
        padding: 10px var(--dynamic-padding); /* Match title and about card padding */
    }
}

